Use EuCW instead of EUCW

--- a/se-arci.html
+++ b/se-arci.html
@@ -14,7 +14,7 @@ Det är en stor amerikansk klubb som ägnar sig åt lågeffekt-QRP.
 <BR CLEAR=LEFT></P>
 
 <center> <hr width="100%"> </center>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 
