--- a/se-ehsc.html
+++ b/se-ehsc.html
@@ -14,7 +14,7 @@ de som gillar telegrafi i hastigheter på åtminstone 60 wpm
 (300 tecken/min (PARIS) [Översättarens anmärkning])
 <P><HR><P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
