--- a/se-eucons.html
+++ b/se-eucons.html
@@ -5,7 +5,7 @@ originalhref: eucons.html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
-<title>EUCWs konstitution</title>
+<title>EuCWs konstitution</title>
 <link rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </head>
 <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink= 
@@ -18,7 +18,7 @@ originalhref: eucons.html
   </font>
   <br>
   <font size="5">
-    <strong>EUROPEAN CW ASSOCIATION (EUCW)</strong>
+    <strong>EUROPEAN CW ASSOCIATION (EuCW)</strong>
   </font>
   <br>
   <font size="2">
@@ -30,7 +30,7 @@ originalhref: eucons.html
 
 <p align="left">
   <font size="3">
-Syftet med EUCW är att skapa ett förbund av oberoende 
+Syftet med EuCW är att skapa ett förbund av oberoende 
 europeiska amatörradiotelegrafiklubbar.
 Genom att använda förbundet som en plattform,
 kan medlemsklubbar utbyta ideer och information,
@@ -61,7 +61,7 @@ samarbeta i allmänhet för amatörradiotelegrafins främjande.
   <font size="3">
     <strong>Stycke 1.</strong>
 Förbundet är känt som 
-"THE EUROPEAN CW ASSOCIATION" (EUCW)
+"THE EUROPEAN CW ASSOCIATION" (EuCW)
 (Det europeiska CW-förbundet)
 <br>
     <strong>Stycke 2.</strong>
@@ -90,10 +90,10 @@ samarbetscertifikatet.<br>
     <strong>Stycke 2.</strong>
 Varje amatörradiotelegrafiklubb som tillhandhåller nöjaktiga bevis
 av att den har 100 eller fler licensierade personer som medlemmar
-kan ansöka om fullt (röstberättigat) medlemsskap i EUCW.
+kan ansöka om fullt (röstberättigat) medlemsskap i EuCW.
 Varje amatörradioklubb som tillhandahåller nöjaktiga bevis av att
 den har 5 till 99 licensierade personer som medlemmar kan ansöka
-om begränsat, (icke-röstberättigat) medlemsskap i EUCW.
+om begränsat, (icke-röstberättigat) medlemsskap i EuCW.
 Ansökningar godkänns om ingen av medlemsklubbarna presenterar
 någon invändning.<br>
 
@@ -105,12 +105,12 @@ Varje medlemsklubb får dra sig ur förbundet genom att skicka
 in en skriftlig anmälan om utträde.<br>
 
     <strong>Stycke 5.</strong>
-Varje medlemsklubb som konsekvent misslyckas att stödja EUCW-aktiviteter
+Varje medlemsklubb som konsekvent misslyckas att stödja EuCW-aktiviteter
 och misslyckas med att ge nöjaktiga garantier till ordföranden om
 framtida stöd, normalt efter en period av två år med brist på stöd,
-uteslutas från medlemsskap i EUCW.
+uteslutas från medlemsskap i EuCW.
 Ordföranden ansvarar för att anmäla dessa omständigheter till förbundet,
-via EUCW bulletinen, och att rekommendera avslutat medlemsskap om det
+via EuCW bulletinen, och att rekommendera avslutat medlemsskap om det
 anses tillämpligt.
   </font>
 </p>
@@ -132,7 +132,7 @@ anses tillämpligt.
     <strong>Stycke 1.</strong>
 Förbundet är själv-styrande.
 Var tredje år skall en medlemsklubb med fullt medlemsskap i förbundet
-nominera EUCW-ordföranden.
+nominera EuCW-ordföranden.
 Sådana klubbar skall turas om att nominera ordföranden i enlighet
 med ordningen i följande lista.
 När en medlemsklubb inte kan nominera en ordförande vid rätt tid har
@@ -146,11 +146,11 @@ fulla medlemmar i förbundet.<br>
 
     <strong>Stycke 2.</strong>
 Varje medlemsklubb representeras i förbundet av en utsedd
-EUCW-kontaktman (ECM) som måste kunna engelska.<br>
+EuCW-kontaktman (ECM) som måste kunna engelska.<br>
 
     <strong>Stycke 3.</strong>
-EUCW representeras officiellt av EUCW-ordföranden.
-EUCW-ordförandens mandatperiod är tre (3) år.<br>
+EuCW representeras officiellt av EuCW-ordföranden.
+EuCW-ordförandens mandatperiod är tre (3) år.<br>
 
     <strong>Stycke 4.</strong>
 Medlemsklubbar kan använda förbundets officiella emblem.<br>
@@ -169,27 +169,27 @@ Kommunikation och information</strong>
 <p align="left">
   <font size="3">
     <strong>Stycke 1.</strong>
-Det officiella språket för all kommunikation inom EUCW är
+Det officiella språket för all kommunikation inom EuCW är
 engelska.<br>
 
     <strong>Stycke 2.</strong>
-Ordföranden skall skicka en EUCW-bulletin till
-alla EUCW-kontaktmän en gång var tredje månaden
-som innehåller nyheter och information i EUCWs intresse.<br>
+Ordföranden skall skicka en EuCW-bulletin till
+alla EuCW-kontaktmän en gång var tredje månaden
+som innehåller nyheter och information i EuCWs intresse.<br>
 
     <strong>Stycke 3.</strong>
-Varje EUCW-kontaktman måste hålla alla andra
-EUCW-kontaktmän informerade om frågor som rör
-EUCWs intresse, normalt genom ordföranden och EUCW-bulletinen,
+Varje EuCW-kontaktman måste hålla alla andra
+EuCW-kontaktmän informerade om frågor som rör
+EuCWs intresse, normalt genom ordföranden och EuCW-bulletinen,
 men genom direkt kommunikation när tiden inte räcker till för 
 att cirkulera viktig infomation med normala medel.<br>
 
     <strong>Stycke 4.</strong>
-EUCW-kontaktmän är ansvariga för att marknadsföra
-medvetenhet och stöd för EUCWs aktiviteter bland medlemmarna i
+EuCW-kontaktmän är ansvariga för att marknadsföra
+medvetenhet och stöd för EuCWs aktiviteter bland medlemmarna i
 deras egen klubb och uppmuntra samarbete mellan deras egna
-klubbar och andra EUCW-medlemsklubbar.
-De är också ansvariga för att publicera EUCW-aktiviteter i de nationella
+klubbar och andra EuCW-medlemsklubbar.
+De är också ansvariga för att publicera EuCW-aktiviteter i de nationella
 amatörradiotidningarna i deras egna länder.<br>
   </font>
 </p>
@@ -207,11 +207,11 @@ amatörradiotidningarna i deras egna länder.<br>
   <font size="3">
     <strong>Stycke 1.</strong>
 Tillägg till konstitutionen kan föreslås från 
-en medlemsklubb med fullt medlemsskap genom deras EUCW-kontaktmän
-eller av EUCW-ordföranden.
+en medlemsklubb med fullt medlemsskap genom deras EuCW-kontaktmän
+eller av EuCW-ordföranden.
 Sådana tillägg kräver godkännande av åtminstone två tredjedelar av
 alla medlemsklubbar med fullt medlemsskap, uttryckt genom deras
-representanter (EUCW-kontaktmän), för att godkännas.
+representanter (EuCW-kontaktmän), för att godkännas.
   </font>
 </p>
 
@@ -225,11 +225,11 @@ Reviderad november 1994.</strong><br>
   </font>
 </p>
 
-<P>Not: Se <a href="se-eucwh.html">EUCW-historian</A>
+<P>Not: Se <a href="se-eucwh.html">EuCW-historian</A>
 för en komplett lista av medlemsklubbar och dagen för deras medlemsskap</P>
 <HR>
-<a href="se-eucw.html"> Tillbaka </a> till listan över EUCW-klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-eucw.html"> Tillbaka </a> till listan över EuCW-klubbar <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body>
