--- a/se-eucw.html
+++ b/se-eucw.html
@@ -5,7 +5,7 @@ originalhref: eucw.html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
 <HEAD>
-<TITLE>EUCW</TITLE>
+<TITLE>EuCW</TITLE>
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
 <BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
@@ -14,7 +14,7 @@ originalhref: eucw.html
 <TR>
 <TD align="left"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 <TD align="center">
-<H1>EUCW - DET EUROPEISKA TELEGRAFIFÖRBUNDET<BR>
+<H1>EuCW - DET EUROPEISKA TELEGRAFIFÖRBUNDET<BR>
 <FONT size="-1">c/o E.C.M. of AGCW-DL</FONT></H1>
 </TD>
 <TD align="right"><IMG src="imgs/agcwecm.gif" alt=""></TD>
@@ -22,7 +22,7 @@ originalhref: eucw.html
 </TABLE>
 
 <H2>Lista över de europeiska medlemsklubbarna och deras<BR>
-"EUCW Communication Managers" (ECMs)</H2>
+"EuCW Communication Managers" (ECMs)</H2>
 
 <P><BR>
 Listans format (sorterad i alfabetisk ordning):</P>
@@ -441,7 +441,7 @@ E-Mail:...9A2EU (at-symbol) hamradio.hr...  </P>
 
 <P>Not 2:
 Om du finner fel i denna lista, berätta det för mig.
-Jag är också intresserad av EUCW-klubbars hemsidor som inte pekas
+Jag är också intresserad av EuCW-klubbars hemsidor som inte pekas
 till från denna sida.
 Skriv till: ... eucw (at-symbol) agcw.de...
 <BR>
@@ -454,7 +454,7 @@ given tidsperiod.
 </P>
 
 <HR>
-<A href="se-index.html">Tillbaka</A> till EUCWs startsida <BR>
+<A href="se-index.html">Tillbaka</A> till EuCWs startsida <BR>
 
 {% include translated.html %}
 </BODY>
