--- a/se-eucwh.html
+++ b/se-eucwh.html
@@ -5,7 +5,7 @@ originalhref: eucwh.html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
-<title>EUCWs historia</title>
+<title>EuCWs historia</title>
 <link rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </head>
 <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink= 
@@ -15,7 +15,7 @@ originalhref: eucwh.html
 
 Senast reviderad 2000-06-14 [Detta kan inte stämma eftersom det är daterat 2007 nedan. Översättarens anmärkning.]
 
-<h2>EUCWs ordföranden</h2>
+<h2>EuCWs ordföranden</h2>
 
 <ol>
 <li><img src="flags/se.gif" alt=""> SM&Oslash;IX Sven Milander c/o
@@ -46,12 +46,12 @@ SHSC/EHSC (*) 1991-2006 </li>
 c/o LZCWC sedan 2007</li>
 </ol>
 
-<h2>EUCWs tillväxthistoria (datum då klubbar gick med)</h2>
+<h2>EuCWs tillväxthistoria (datum då klubbar gick med)</h2>
 
 <dl>
 <dt> 1979</dt>
 
-<dd>EUCWs grundande klubbar: SCAG (SM/OZ), AGCW (DL), GQRP (G).</dd>
+<dd>EuCWs grundande klubbar: SCAG (SM/OZ), AGCW (DL), GQRP (G).</dd>
 
 <dt> till 1981</dt>
 
@@ -141,7 +141,7 @@ c/o LZCWC sedan 2007</li>
 
 </dl>
 
-<h2> Andra händelser i EUCW</h2>
+<h2> Andra händelser i EuCW</h2>
 
 <dl>
 <dt> 1978</dt>
@@ -152,37 +152,37 @@ Stadgarna föreslogs den 1978-06-27
 (dessa stadgar är återgivna i SCAG-NL nummer 50 från April 1978).
 Enligt dessa stadgar är det bara klubbar med åtminstone
 100 medlemmar kan bli medlem.
-Ledarskapet i EUCW skall rotera årligen.
+Ledarskapet i EuCW skall rotera årligen.
 </dd>
 
 <dt> 1979</dt>
 
-<dd>EUCW grundas officiellt.</dd>
+<dd>EuCW grundas officiellt.</dd>
 
 <dt> 1986</dt>
 
 <dd>
 CWC (HB9) togs bort 1986-02-15. 
-SCAGs ledning föreslår SCAGs utträde ur EUCW (1986-03-01)
+SCAGs ledning föreslår SCAGs utträde ur EuCW (1986-03-01)
 att tas upp på årsmötet.
-1986.05.31: SCAGs årsmöte i Köpenhamn fördröjer beslutet om EUCW-utträde.
-DL6MK får problem att hitta en ny EUCW-ledare.
+1986.05.31: SCAGs årsmöte i Köpenhamn fördröjer beslutet om EuCW-utträde.
+DL6MK får problem att hitta en ny EuCW-ledare.
 TOPS, SARS, HCC, INORC kan inte ta över ledarskapet.
-UFT föreslår ett EUCW-diplom.
+UFT föreslår ett EuCW-diplom.
 </dd>
 
 <dt> 1987</dt>
 
-<dd>DJ2XP tar över EUCW FP-aktiviteten.
+<dd>DJ2XP tar över EuCW FP-aktiviteten.
 Datum för FP ändras från Juni till sent i November.
-1987-04-25: SCAGs årsmöte i Täby överger planerna på ett utträde ur EUCW.
+1987-04-25: SCAGs årsmöte i Täby överger planerna på ett utträde ur EuCW.
 </dd>
 
 <dt> 1988</dt>
 
 <dd>
-GQRPs nybörjardiplomet får status som en officiell EUCW-aktivitet.
-EUCW-nätet (80 m QTC-nät) är igång sedan i september.
+GQRPs nybörjardiplomet får status som en officiell EuCW-aktivitet.
+EuCW-nätet (80 m QTC-nät) är igång sedan i september.
 </dd>
 
 <dt> 1990</dt>
@@ -192,13 +192,13 @@ möjligheten att gå med igen finns kvar.
 Broderskapliga länkar till icke-europeiska klubbar skapas:
 QRP-ARCI (W/K) och
 GPCW (PY).
-SCAGs Straight Key Day (Handpumpsdagen) blir en officiell EUCW-aktivitet.
+SCAGs Straight Key Day (Handpumpsdagen) blir en officiell EuCW-aktivitet.
 </dd>
 
 <dt> 1991</dt>
 
 <dd>
-Worked EUCW Award (Kört EUCW-diplomet) skapades (1991-04-27) i åminnelse
+Worked EuCW Award (Kört EuCW-diplomet) skapades (1991-04-27) i åminnelse
 av Samuel F.B. Morses 200 åriga födelsedag.
 HCC (Spanien) stod för tryckkostnaden (i Storbrittanien) för diplomen,
 som designades av G4FAI.
@@ -230,7 +230,7 @@ alla icke-CW-klubbar och alla icke-europeiska klubbar kommer att tas
 bort under ansökningsförfarandet.
 QRP-klubbar kommer att förbli ett undantag eftersom QRP är nära besläktat
 med telegrafi.
-EUCW FP-aktiviteten får en sponsor till i EA3DOS som donerar miniatyrnycklar
+EuCW FP-aktiviteten får en sponsor till i EA3DOS som donerar miniatyrnycklar
 ("Lilliput") till vinnarna.
 </dd>
 
@@ -250,8 +250,8 @@ Ordförandens mandatperiod är tre (3) år.
 
 <dd>
 Medlemsskapsansökan från CW-C-UFRC (Belgien) publicerat i
-EUCW Bulletin 2000/2.
-Även GACW från Argentina erbjöd samarbete med EUCW.
+EuCW Bulletin 2000/2.
+Även GACW från Argentina erbjöd samarbete med EuCW.
 Förslag till en ny konstitution.
 </dd>
  
@@ -259,9 +259,9 @@ Förslag till en ny konstitution.
  
 <dd>
 CW-C-UFRC (Belgien) ändrade namn till CFT.
-FISTS skänker en EUCWs QRS-vecka till att bli en ny EUCW-aktivitet.
+FISTS skänker en EuCWs QRS-vecka till att bli en ny EuCW-aktivitet.
 Första QRS-veckan hålls i april 2001.
-UFT dedikerar en 160m-tävling till EUCW.
+UFT dedikerar en 160m-tävling till EuCW.
 </dd>
 
 <dt> 2002</dt>
@@ -277,10 +277,10 @@ ansökte om medlemsskap men fick veto.
 
 <dd>
 DJ2XP pensionerade sig från sin post som
-EUCW-diplom- och 
-EUCW FP-aktivitetsansvarig.
+EuCW-diplom- och 
+EuCW FP-aktivitetsansvarig.
 Dessa arbeten togs över av DK7VW.
-Oturlingt nog försvann resultaten från 2005 års EUCW FP-aktiviteten
+Oturlingt nog försvann resultaten från 2005 års EuCW FP-aktiviteten
 under övertagandet.
 </dd>
 
@@ -290,7 +290,7 @@ under övertagandet.
 
 <p>
 Denna lista baseras på mitt arkiv med AGCW-Info och SCAG-NL från
-80-talet och mitt EUCW-bulletinarkiv som startade 1991.
+80-talet och mitt EuCW-bulletinarkiv som startade 1991.
 Flera vänner har hjälpt till att förbättra informationen,
 se listan nedan.
 Trots det är listan inkomplett och kan innehålla felaktigheter.
@@ -300,8 +300,8 @@ Tack på förhand.
 </p>
 
 <p>(*) ON5ME stod för alla omkostnade för ordförandeskapet under 
-hela sin tid som ordförande, dvs. EUCW-medlen för ledningen har
-bara används för att täcka kostnader åt andra EUCW-funktionärer.
+hela sin tid som ordförande, dvs. EuCW-medlen för ledningen har
+bara används för att täcka kostnader åt andra EuCW-funktionärer.
 Tack Oscar.
 </p>
 
