--- a/se-eunov.html
+++ b/se-eunov.html
@@ -4,7 +4,7 @@ originalhref: eunov.html
 ---
 <html>
 <head>
-<title>EUCWs nybörjardiplom</title>
+<title>EuCWs nybörjardiplom</title>
 <LINK REL="SHORTCUT ICON" HREF="imgs/eucw.ico">
 </head>
 <BODY BGCOLOR="#DCFDDC" TEXT="black" LINK="blue" ALINK="red" VLINK="purple">
@@ -13,7 +13,7 @@ originalhref: eunov.html
 <td align="LEFT"><img src="imgsclub/gqrp.gif" alt=""></td>
 <td align="CENTER">
 <h1> Det europeiska CW-förbundet</h1>
-<h2 align="center">EUCWs Nybörjardiplom</h2>
+<h2 align="center">EuCWs Nybörjardiplom</h2>
 </td>
 <td align="RIGHT"><img src="imgs/eucwflag.gif" alt=""></td>
 </tr>
@@ -24,8 +24,8 @@ under de första 12 månaderna som han har en amatörradiolicens
 kontaktar 50 olika stationer på telegrafi och får QSL-kort
 från dessa.
 <strong>Den som ansöker behöver inte vara medlem i någon
-EUCW-klubb för att vara kvalificerad för
-EUCWs Nybörjardiplom.</strong>
+EuCW-klubb för att vara kvalificerad för
+EuCWs Nybörjardiplom.</strong>
 </p>
 
 <p><strong>Diplomets klasser</strong><br>
@@ -57,7 +57,7 @@ Greasby, Merseyside CH49 3ND,<br>
 England.</strong><br>
 <br>
 <HR>
-Tillhandahållandet av EUCWs Nybörjardiplom är ett bidrag från
+Tillhandahållandet av EuCWs Nybörjardiplom är ett bidrag från
 G-QRP klubben till de aktiviteter som Europeiska CW-förbundet,
 som finns till för att marknadsföra och uppmuntra amatörradiotelegrafi
 genom ömsesidigt samarbete och aktiviteter i medlemsklubbarna.<br>
@@ -66,7 +66,7 @@ Klicka <A HREF="imgsdpl/eunov.gif">här</A>
 för att se diplomets utseende.
 <P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body>
