--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -4,7 +4,7 @@ originalhref: euqrs.html
 ---
 <html>
 <head>
-<title>EUCWs QRS-vecka</title>
+<title>EuCWs QRS-vecka</title>
 <link rel="SHORTCUT ICON" href="eucw.ico">
 </head>
 <body bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
@@ -14,7 +14,7 @@ originalhref: euqrs.html
 <td align="left"><img src="eucwflag.gif" alt=""></td>
 <td align="center">
 <h3>Det europeiska CW-förbundet</h3>
-<h1 align="center">EUCWs QRS-vecka</h1>
+<h1 align="center">EuCWs QRS-vecka</h1>
 </td>
 <td align="right"><img src="agcw.gif" alt=""></td>
 </tr>
@@ -47,8 +47,8 @@ originalhref: euqrs.html
 <a href="se-euqrs.html">
 <img src="f/se.gif" width="30" height="20" alt="SV"></a>
 <h3>Allmänt</h3>
-<p>EUCW bjuder hjärtligt in alla radioamatörer och lyssnaramatörer att
-  vara med i den årliga EUCWs QRS-vecka.  Det här är inte en tävling
+<p>EuCW bjuder hjärtligt in alla radioamatörer och lyssnaramatörer att
+  vara med i den årliga EuCWs QRS-vecka.  Det här är inte en tävling
   (contest), tvärtom är det en inbjudan till minska hastigheten och
   njuta av aktivitet i långsam morse-takt under fem dagar.  Dagarna är
   valda för att undvika de contest-fyllda veckosluten.  Målet är inte
@@ -57,13 +57,13 @@ originalhref: euqrs.html
   delta som en service till potentiella nykomlingar.  Det här kommer
   inte att ge er ära och berömmelse men kan hjälpa andra även om det
   kan vara lite prövande för tålamodet.</p>
-<p>Kör vilken station som helst, även medlemmar i EUCW-klubbar, men
+<p>Kör vilken station som helst, även medlemmar i EuCW-klubbar, men
   använd bara QRS.  Vanliga QSO:n med icke-deltagande stationen kan
   finnas med i loggarna.</p>
-<p>EUCWs QRS-vecka har en historia som sträcker sig ända tillbaka till
-  2001 när den infördes av FISTS.  EUCW tackar FISTS för denna
+<p>EuCWs QRS-vecka har en historia som sträcker sig ända tillbaka till
+  2001 när den infördes av FISTS.  EuCW tackar FISTS för denna
   förträffliga ide och för att hantera allt arbete under det första
-  decenniet.  Sedan 2012 organiseras EUCWs QRS-vecka av AGCW.  Ett
+  decenniet.  Sedan 2012 organiseras EuCWs QRS-vecka av AGCW.  Ett
   erkännande delas ut till de mest aktiva deltagarna.</p>
 <p>De som vill kan markera deltagare som utmärker sig med upp till tre
   röster för den "mest läsbara telegrafin" (en röst per station).  Om
@@ -84,8 +84,8 @@ originalhref: euqrs.html
 A - Mer än 10W input eller 5W ut<br>
 B - QRP (10w input eller 5w ut, eller mindre)<br>
 C - Lyssnaramatörer.<br>
-<p>Det finns också en osynlig klass av deltagande EUCW-klubbar.  Du
-  kan knyta ditt deltagande till den EUCW-klubb som du väljer.  Lägg
+<p>Det finns också en osynlig klass av deltagande EuCW-klubbar.  Du
+  kan knyta ditt deltagande till den EuCW-klubb som du väljer.  Lägg
   till klubbnamnet och ditt medlemsnummer i loggen.  Du får lov att
   berätta din klubbtillhörighet i QSO:na men det krävs inte.  Det
   finns ingen anledning att förvirra nykomlingar med klubbnamn och
@@ -132,7 +132,7 @@ och listan av QSO.</p>
     1) Egen anropssignal
     2) Namn och QTH (som användes under aktiviteten)
     3) Adress
-    4) En EUCW-klubben som du är medlem i
+    4) En EuCW-klubben som du är medlem i
     5) Klass (A=QRO, B=QRP eller C=lyssnaramatörer)
     6) Antal giltiga QSO:n
     7) Dina röster för mest lästbara telegrafin
@@ -213,7 +213,7 @@ stationerna.</p>
   en bild, kolla att det är läsbart och maila den.</p>
 
 <p>Huvudidén är att någon logg är bättre än ingen logg alls precis som
-  en del av ett QSO är bättre än inget QSO.  EUCWs QRS-vecka är i
+  en del av ett QSO är bättre än inget QSO.  EuCWs QRS-vecka är i
   första hand inte någon tävling utan ett tillfälle för nykomlingar
   på telegrafi och personer som är skeptiska till telegrafi att njuta
   av morse-kod utan risk för hög hastighet.  Om du har möjlighet att
@@ -224,7 +224,7 @@ stationerna.</p>
 <h3><a name="REKOMMENDERAD_MJUKVARA">REKOMMENDERAD MJUKVARA</a></h3>
 <p><a href="http://fists.co.uk/members/membersflc.html">http://fists.co.uk/members/membersflc.html
     Gratisprogrammet FISTS Log Converter for Windows</a> bör användas
-    för att skapa loggen för att skicka in i EUCWs QRS-vecka.  Det kan
+    för att skapa loggen för att skicka in i EuCWs QRS-vecka.  Det kan
     antingen läsa QSO:n från en ADIF-fil exporterad från olika
     loggningsprogram, eller, om du inte använder något
     loggningsprogram, kan den inbyggda loggboks-funktionen användas
@@ -304,7 +304,7 @@ stationerna.</p>
 <a href="https://eucw.org/euqrs23.html">2023</a> 
 </p>
 <P>
-EUCWs QRS-vecka sponsras och organiseras av AGCW-DL.
+EuCWs QRS-vecka sponsras och organiseras av AGCW-DL.
 <a href="https://eucw.org/dp.pdf"><FONT size="-2">Integritetspolicy (ej översatt)</FONT></a>
 {% include translated.html %}
 </body>
