--- a/se-gtc.html
+++ b/se-gtc.html
@@ -25,7 +25,7 @@ Följande brev skickades ut i telegrafivärlden för att presentera klubben.
 <P ALIGN="CENTER">
 Grekiska telegrafiklubben<br>
 (SV-CW-C) (Sedan 1998)<br>
-en medlem i EUCW<br>
+en medlem i EuCW<br>
 <b>HELLINIKI LESHI TILEGRAFIAS</b><br>
 ** MÅL, STADGAR och REGLER **<br>
 </P>
@@ -89,7 +89,7 @@ nu kan vi säga att många dessa saker kommer att lösas på ett bra sätt.
 </P>
 <P ALIGN="LEFT">
 För närvarande, som en ny systerklubb, kommer vi att deltaga i de
-aktiviteter som finns tillgängliga i EUCW-klubbarna, (dvs. tävlingar etc),
+aktiviteter som finns tillgängliga i EuCW-klubbarna, (dvs. tävlingar etc),
 och göra vårt bästa för att de aktiviteterna skall få framgång.
 [Språket är i detta stycke ganska egendomligt.
 Jag har försökt återskapa det jag tror menas men jag kan ha misstolkat.
@@ -97,7 +97,7 @@ Jag har försökt återskapa det jag tror menas men jag kan ha misstolkat.
 </P>
 <P ALIGN="LEFT">
 Vi vill också skapa goda relationer med ett ärligt och öppet samarbete,
-och nära kontakter mellan GTC (SV-CW-C) och stora EUCW-klubbar som,
+och nära kontakter mellan GTC (SV-CW-C) och stora EuCW-klubbar som,
 Deutscher Telegraphy Club e.V. (DL-CW-C) (Tyska telegrafiklubben),
 Activity Group Telegrafie e.V. (AGCW-DL),
 FISTS,
@@ -265,7 +265,7 @@ SV - CW - Medlemmar
 <hr>
 <P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 </p>
 
 {% include translated.html %}
