--- a/se-hsc.html
+++ b/se-hsc.html
@@ -29,7 +29,7 @@ Websidor:<BR CLEAR="left">
 </A>
 <P><HR><P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
