--- a/se-index.html
+++ b/se-index.html
@@ -1,13 +1,13 @@
 ---
 priority: 3
-title: EUCW-sidorna på svenska
+title: EuCW-sidorna på svenska
 translated: 2007-05-14
 originalhref: index.html
 ---
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
-<TITLE>EUCW</TITLE>
+<TITLE>EuCW</TITLE>
 <META charset="UTF-8">
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
@@ -17,7 +17,7 @@ originalhref: index.html
 <TR valign="top">
 <TD bgcolor="#0000FF" width="152" align="left">
 <P><FONT color="#FFFFFF"><IMG src="imgs/eucwflag.gif" width="152"
-height="152" alt="EUCW Logo"></FONT></P>
+height="152" alt="EuCW Logo"></FONT></P>
 
 <P><IMG src="flags/se.gif" alt="på Svenska"></P>
 
@@ -35,7 +35,7 @@ Associerade klubbar</FONT></A></P>
 size="+1" color="#FFFFFF">Nybörjardiplom</FONT></A></P>
 
 <P><A href="se-eucwa.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">EUCW-diplom</FONT></A></P>
+size="+1" color="#FFFFFF">EuCW-diplom</FONT></A></P>
 
 <P><A href="se-eucwh.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">Historia</FONT></A></P>
@@ -49,7 +49,7 @@ Funktionärer</FONT></A></P>
 "center">Syfte</FONT></A></P>
 
 <P><A href="se-eucwp.html"><FONT face="Arial, Helvetica, sans-serif"
-size="+1" color="#FFFFFF">EUCW FP-aktivitet</FONT></A></P>
+size="+1" color="#FFFFFF">EuCW FP-aktivitet</FONT></A></P>
 
 <P><A href="se-euskd.html"><FONT face="Arial, Helvetica, sans-serif"
 size="+1" color="#FFFFFF">Handpumpsdag</FONT></A></P>
@@ -88,7 +88,7 @@ alt=""><A href="http://www.agcw.org/eucw/english.html">
 <TR valign="top">
 <TD width="50%">
 <P>
-<A href="http://www.morsecode.nl/eucw.html" target="_blank">EUCW</A>
+<A href="http://www.morsecode.nl/eucw.html" target="_blank">EuCW</A>
 är ett förbund av europeiska telegrafiklubbar.
 </P>
 
@@ -101,16 +101,16 @@ och samarbeta för amatörradiotelegrafins bästa.
 </P>
 
 <P>
-Medlemmar i EUCW är inte enskilda personer utan europeiska telegrafiklubbar,
+Medlemmar i EuCW är inte enskilda personer utan europeiska telegrafiklubbar,
 dvs. rena CW-klubbar och också QRP-klubbar som på ett naturligt sätt ofta
 värdesätter CW.
-Också icke-europeiska organisation kan vara associerade med EUCW.
+Också icke-europeiska organisation kan vara associerade med EuCW.
 </P>
 
 <P>
 Varje medlemsförening utser en representant som kallas
-ECM (EUCW Communications Manager)
-för att hantera kommunikationen med EUCW.
+ECM (EuCW Communications Manager)
+för att hantera kommunikationen med EuCW.
 
 Dessa web-sidor underhålls av ECM för AGCW (Martin, ik2rmz) med stöd av
 Tom (hb9dod at agcw.de, som koordinerar ON och PA) och
@@ -156,7 +156,7 @@ på nyhetsgruppen de.comm.ham och på denna hemsida.
 <TABLE width="100%" border="0" cellpadding="2">
 <TR>
 <TD>
-EUCWs officiella språk är <I>Engelska</I>,
+EuCWs officiella språk är <I>Engelska</I>,
 och därför är utgångspunkten att all information först bara finns
 tillgänglig på Engelska.
 [Här finns, i den tyska varianten,
@@ -164,7 +164,7 @@ en ursäkt om att inte allt är översatt till tyska men den är ointressant
 för den svenska publiken. Översättarens anmärkning.]
 
 <P><FONT size="-1">Senast uppdaterad: <A href="se-news.html">tryck här.</A><BR>
-Skicka kommentarer på innehållet till ECM i AGCW (Email: EUCW (at) agcw . de).
+Skicka kommentarer på innehållet till ECM i AGCW (Email: EuCW (at) agcw . de).
 </FONT></P>
 
 <P>
