--- a/se-oecwg.html
+++ b/se-oecwg.html
@@ -66,7 +66,7 @@ Den första lördagen varje månad på 3575 klockan 8 lokal tid.
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
