--- a/se-op.html
+++ b/se-op.html
@@ -6,7 +6,7 @@ translated: 2024-03-31
 
 <html>
 <head>
-  <title>EUCW Tips för telegrafi-QSO</title>
+  <title>EuCW Tips för telegrafi-QSO</title>
   <link rel="SHORTCUT ICON" href="eucw.ico">
 </head>
 
@@ -18,7 +18,7 @@ translated: 2024-03-31
 
       <td align="center">
         <h3>Det europeiska CW-förbundet</h3>
-        <h1 align="center">EUCW tips för telegrafi-QSO</h1>
+        <h1 align="center">EuCW tips för telegrafi-QSO</h1>
         <h3 align="center">Telegrafi-QSO på olika språk</h3>
       </td>
 
@@ -123,12 +123,12 @@ Det betyder att du kan anmäla dig som frivillig även om du inte
 förstår någon engelska.<br>
 
 <b>Format</b>: Använd inte någon speciell mall för denna
-sammanställning.  Inte heller lägger vi in EUCWs logotyp på dessa
+sammanställning.  Inte heller lägger vi in EuCWs logotyp på dessa
 QSO-texter.  Använd vanlig enkel html-text.<br>
 
 Tänk på att all text på eucw.org tillhör public domain.
 <p>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
 <a href="dp.pdf"><FONT size="-2">Integritets-policy (ej översatt)</FONT></a>
 
