--- a/se-shsc.html
+++ b/se-shsc.html
@@ -13,7 +13,7 @@ originalhref: shsc.html
 </P><br>
 <P><HR><P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
