--- a/se-agcw.html
+++ b/se-agcw.html
@@ -28,7 +28,7 @@ AGCW har nära relationer med den vanliga amatörradioklubben i tyskland -
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 
