--- a/se-cft.html
+++ b/se-cft.html
@@ -36,7 +36,7 @@ såsom den är designad av F6IIE.
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 
