--- a/se-eacw.html
+++ b/se-eacw.html
@@ -45,7 +45,7 @@ Konktatperson, webmaster och mailinglistadministrator är
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
