--- a/se-eaqrp.html
+++ b/se-eaqrp.html
@@ -15,7 +15,7 @@ i vilken mod som helst då man använder lite eller mycket lite effekt.
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
