--- a/se-eucwa.html
+++ b/se-eucwa.html
@@ -5,7 +5,7 @@ originalhref: eucwa.html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
-<TITLE>EUCW Diplomet</TITLE>
+<TITLE>EuCW Diplomet</TITLE>
 <LINK rel="SHORTCUT ICON" href="imgs/eucw.ico">
 </HEAD>
 <BODY bgcolor="#DCFDDC" text="black" link="blue" alink="red" vlink=
@@ -15,16 +15,16 @@ originalhref: eucwa.html
 <TD align="left"><IMG src="imgsclub/hcc.gif" alt=""></TD>
 <TD align="center">
 <H1>Det europeiska CW-förbundet</H1>
-<H2 align="center">Kört EUCW Diplom</H2>
+<H2 align="center">Kört EuCW Diplom</H2>
 </TD>
 <TD align="right"><IMG src="imgs/eucwflag.gif" alt=""></TD>
 </TR>
 </TABLE>
 <HR>
 <CENTER>
-EUCW är tacksamma gentemot HCC (Hispania CW Club)
+EuCW är tacksamma gentemot HCC (Hispania CW Club)
 för att de stod för tryckkostnaden för certifikaten
-till EUCW-diplomet</CENTER>
+till EuCW-diplomet</CENTER>
 <HR>
 <P><BR>
 <STRONG>Allmänna regler</STRONG><BR>
@@ -44,7 +44,7 @@ Ansökaren skall skicka en lista med kontakter
 [SWL-stationer listar hörda stationer, översättarens anmärkning])
 för vilka QSL-kort mottagits.
 Listan måste vidimeras av en licensierad radioamatör som är
-medlem i en EUCW-klubb och som anger namnet på sin klubb
+medlem i en EuCW-klubb och som anger namnet på sin klubb
 och sitt medlemsskapsnummer.<BR>
 
 <STRONG>4</STRONG>.
@@ -54,12 +54,12 @@ anropssignal på den körda stationen,
 band,
 namn på operatören,
 QTH,
-EUCW-klubb,
+EuCW-klubb,
 klubb medlemsnummer.<BR>
 
 <STRONG>5</STRONG>.
 Se <A href="se-eucw.html">http://www.scag.se/eucw-sv/eucw.html</A>
-för att hitta en lista med EUCW-klubbar.<BR>
+för att hitta en lista med EuCW-klubbar.<BR>
 
 <STRONG>6</STRONG>.
 Olika certifikat utfärdas för varje klass på diplomet.<BR>
@@ -86,14 +86,14 @@ Diplomfunktionärens beslut är slutgiltigt för alla ansökningar.
 <STRONG>1</STRONG>.
 Bekräftade kontakter på bara telegrafi.
 (Lyssnaramatörer - hörda telegrafistationer)
-med 100 olika stationer som är medlemmar i EUCW-klubbar,
+med 100 olika stationer som är medlemmar i EuCW-klubbar,
 på tre olika amatörradioband med åtminstone 20 stationer
 körda eller hörda på varje ban.<BR>
 
 <STRONG>2</STRONG>. 
 De 100 stationerna körda eller hörda på tre band
 måste inkludera åtminstone tre medlemmar från vardera av sex olika
-EUCW-klubbar.<BR>
+EuCW-klubbar.<BR>
 
 <STRONG>3</STRONG>.
 Upp till 40 stationer körda eller hörda den 27:de April, 1991,
@@ -122,13 +122,13 @@ av pergamenttyp och har en bild av Europa
 <P>Klicka <A href="imgsdpl/eucwa.gif">här</A>
 för att se diplomets utseende.</P>
 
-<P><a name="award_manager">EUCWdiplomfunktionär</a>:<BR>
+<P><a name="award_manager">EuCWdiplomfunktionär</a>:<BR>
 DK7VW, Werner 'Joe' Jochem, Wendelsborn 34, D-66606 St. Wendel,
 E-mail:...joe (at-symbol) dk7vw.de...</P>
 <HR>
 
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </BODY>
