--- a/se-gacw.html
+++ b/se-gacw.html
@@ -48,7 +48,7 @@ E-mail:...gacw (AT-SYMBOL) lan.no-ip.org...
 <P>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
