--- a/se-inorc.html
+++ b/se-inorc.html
@@ -47,7 +47,7 @@ Email:...i1qod (at-tecknet) Lnet . it...
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
