--- a/se-iqrp.html
+++ b/se-iqrp.html
@@ -22,7 +22,7 @@ Kontakt E-mail...i3ffe (at-symbol) quipo.it...
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
