--- a/se-isqrp.html
+++ b/se-isqrp.html
@@ -18,7 +18,7 @@ Mottot är: "Bygg, Lär, Lär ut".
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
