--- a/se-lzcwc.html
+++ b/se-lzcwc.html
@@ -38,7 +38,7 @@ Nomineringar och röstningar sker vid rundaborden.
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
