--- a/se-rtc.html
+++ b/se-rtc.html
@@ -37,7 +37,7 @@ Tre diplom ges ut nämligen W-RTC-M, CWD, CWAA.
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
