--- a/se-ruqrp.html
+++ b/se-ruqrp.html
@@ -26,7 +26,7 @@ UE3QRP & RU9QRP/9  HQ-stationer
 </ul>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
