--- a/se-spcwc.html
+++ b/se-spcwc.html
@@ -58,7 +58,7 @@ E-mail:...qtc (at-symbol) post.pl...<P>
 </HTML>
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
