--- a/se-vhsc.html
+++ b/se-vhsc.html
@@ -64,7 +64,7 @@ E-mail...dingelom (at-symbol) hetnet.nl...
 </PRE>
 <P><HR><P>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
