--- a/se-ylcwg.html
+++ b/se-ylcwg.html
@@ -19,7 +19,7 @@ Förespråkar telegrafi i den kvinnliga amatörradiogemenskapen.
 
 <center> <hr width="100%"> </center>
 <a href="se-eucw.html"> Tillbaka </a> till listan över klubbar <br>
-<a href="se-index.html"> Tillbaka </a> till EUCWs startsida <br>
+<a href="se-index.html"> Tillbaka </a> till EuCWs startsida <br>
 
 {% include translated.html %}
 </body></html>
